--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-        <title>S+B Wedding</title>
-        <meta name="description" content="Welcome to the wedding website for Sarah and Brad's Big Day!">
+        <title>Casamento de Lídia e Luciano</title>
+        <meta name="description" content="Bem-vindo ao site de nosso casamento!">
 
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 
@@ -54,8 +54,8 @@ http://scal.io -- check us out.
                 <div id="heading" class="wrapper clearfix">
                     <nav id="nav">
                         <ul>
-                            <li><a href="#brideandgroom">THE BRIDE &amp; GROOM</a></li>
-                            <li><a href="#wedding">WEDDING</a></li>
+                            <li><a href="#brideandgroom">OS NOIVOS</a></li>
+                            <li><a href="#wedding">CERIMONIA</a></li>
                             <li><a href="#accomodations">ACCOMODATIONS</a></li>
                             <li><a href="#registry">REGISTRY</a></li>
                             <li><a href="http://sarahlovesbradley.tumblr.com" target="_blank">BLOG</a></li>
