--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ http://scal.io -- check us out.
 ****************************************************************************************************-->
 
         <div id="bg-image">
-            <img src="img/bg-pic.jpg" alt="bg" />
+            <img src="img/fundo-casamento.jpg" alt="bg" />
         </div>
 
         <div id="bg-container">
@@ -70,17 +70,14 @@ http://scal.io -- check us out.
 
                     <header>
                         <div id="introtext">
-                            <span class="head-sarah">Sarah</span>
+                            <span class="head-sarah">Lídia</span>
                             <span class="head-brad">&nbsp;
                                 <span class="amp">&amp;</span> 
-                                BRADLEY
+                                Luciano
                             </span>
-                            <div class="date">SEPTEMBER 6<sup>th</sup>, 2013</div>
+                            <div class="date">6 de Junho, 2015</div>
                         </div>
 
-                        <div class="learnmore" style="background-color: red; padding: 30px 0 30px 0; font-size: 22px;">
-                            Learn more about Bradley's mobile &amp; web design/development creations at &nbsp;&nbsp;<a href="http://scal.io" target="_blank"><strong>http://scal.io</strong></a>
-                        </div>
                     </header>
 
                     <div class="clearfix"></div>
