descrição dos noivos

--- a/index.html
+++ b/index.html
@@ -90,16 +90,16 @@ http://scal.io -- check us out.
 
                             <h2>LÍDIA</h2>
                             <p>
-                                <img src="img/sarahThumb.jpg" class="thumb" alt="Sarah" />
-                                Lidia é uma pessoa balançante.</p>
+                                <img src="img/lidia.jpg" class="thumb" alt="Sarah" />
+                                Lídia é brasiliense. Pessoa super comunicativa e amiga, adora conversar sobre qualquer assunto. Uma mulher inteligente e forte. Encontrou em seu noivo Luciano alguém com quem compartilhar alegrias e dores. Ama o jeito simples dele de viver a vida.</p>
 
                         </div><!--end column-->
                         <div class="column right">
 
                             <h2>LUCIANO</h2>
                             <p>
-                                <img src="img/bradThumb.jpg" class="thumb" alt="Brad" />
-                                Luciano é nerd.</p>
+                                <img src="img/luciano.jpg" class="thumb" alt="Brad" />
+                                Luciano é paraense que se apaixonou por Brasília e o céu multicolorido da cidade. É um nerd que adora ler, jogar e desenvolver projetos diversos. Encontrou em sua noiva Lídia alguém com quem passar momentos grandiosos e simples. Luciano sorri como um bobo quando a Lídia se balança de felicidade.</p>
 
                         </div><!--end column-->
 
@@ -120,7 +120,7 @@ http://scal.io -- check us out.
 
                             <h2>O NOIVADO</h2>
                             <p>Às margens do lago Paranoá, trocamos votos de amor e trocamos alianças enquanto lembrávamos que na margem oposta havia acontecido um de nossos primeiros encontros.</p>
-                            <p>Banhados pela luz das estrelas e um bom reggae tocando próximo nós, fomos abordados por um desconhecido que nos presenteou com uma flor amarela. Não sei quem era ou o que o motivou a nos presentear, mas a flor me fez lembrar que uma nova vida começa para nós dois, uma vida em que duas pessoas passam a conviver em união como casal.</p>
+                            <p>Banhados pela luz das estrelas e um bom reggae tocando próximo a nós, fomos abordados por um desconhecido que nos presenteou com uma flor amarela. Não sabemos quem era ou o que o motivou a nos presentear, mas a flor nos fez lembrar que uma nova vida começa para nós dois, uma vida em que duas pessoas passam a conviver em união como casal.</p>
                                                         
                         </div><!--end column-->
 
@@ -184,7 +184,7 @@ http://scal.io -- check us out.
                                 Talita e Petrus<br />
                                 Gardênia e Ricardo<br />
                                 Gabrielly e Leonardo<br />
-                                Fulano e Fulana
+                                Dulci e Marcos
                                 </p>
                             </div>
                             <div class="column right">
