--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ http://scal.io -- check us out.
 
         <script>
           var _gaq = _gaq || [];
-          _gaq.push(['_setAccount', 'UA-XXXXXXX-XX']);
+          _gaq.push(['_setAccount', 'UA-59880718-1']);
           _gaq.push(['_trackPageview']);
 
           (function() {
