padrinhos da lidia

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ http://scal.io -- check us out.
                                 Livia Carolini e Jacksom<br />
                                 Lucas e Karinne<br />
                                 Ana Paola e Anderson<br />
-                                Fulano e Fulana
+                                Patrícia e Wilian
                                 </p>
                             </div>
                             <div class="column right">
