--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@ http://scal.io -- check us out.
                             <div class="padrinhos">
                                 <p>
                                 Livia Carolini e Jacksom<br />
-                                Lucas e Karinne<br />
+                                Karinne e Lucas<br />
                                 Ana Paola e Anderson<br />
-                                Patrícia e Wilian
+                                Patrícia e William
                                 </p>
                             </div>
                             <div class="column right">
