--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@ http://scal.io -- check us out.
                                 Livia Carolini e Jacksom<br />
                                 Karinne e Lucas<br />
                                 Ana Paola e Anderson<br />
-                                Patrícia e William
+                                Patrícia e William<br />
+                                Raquel e Anderson
                                 </p>
                             </div>
                             <div class="column right">
@@ -184,7 +185,8 @@ http://scal.io -- check us out.
                                 Talita e Petrus<br />
                                 Gardênia e Ricardo<br />
                                 Gabrielly e Leonardo<br />
-                                Dulci e Marcos
+                                Dulci e Marcos<br />
+                                Mônica e Eduardo
                                 </p>
                             </div>
                             <div class="column right">
